# lerobot

./: .gitignore  README.md  TUTORIAL.md  env.py  pyproject.toml  run_sim.py
lerobot-policy-deployment-app/: .gitignore  README.md  app.yaml  deploy.sh
lerobot-policy-deployment-app/assets/: app.js  index.html  style.css
lerobot-policy-deployment-app/python/: main.py  requirements.txt
lerobot-policy-deployment-app/sketch/: led_matrix.cpp  led_matrix.h  sketch.ino  status_frames.h
lerobot_sim/: __init__.py
lerobot_sim/datasets/: __init__.py  dataset_manager.py
lerobot_sim/envs/: __init__.py  configs.py  factory.py  observation_utils.py  pick_place.py  push_t.py  reach.py
lerobot_sim/policies/: __init__.py  policy.py  trainer.py
lerobot_sim/robots/: __init__.py  sim_robot_arm.py
lerobot_sim/teleop/: __init__.py  gamepad_teleop.py  keyboard_teleop.py
lerobot_sim/utils/: __init__.py  constants.py  helpers.py
lerobot_sim/visualization/: __init__.py  visualizer.py
